[MFLP-52] fix: fix alignment of header and catagories table

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   max-width: 1280px;
+  width: 90%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -679,10 +680,14 @@ body.modal-open {
   width: 100vw;
   max-width: 100%;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  margin: 0 -250px;
+  padding: 0;
 }
 
 .product-listing-header {
-  padding: 40px 0;
+  margin-top: 30px;
   text-align: left;
   font-size: 48px;
   font-weight: bold;
@@ -691,9 +696,8 @@ body.modal-open {
 
 .product-listing-main {
   display: flex;
-  margin: 0 auto;
   gap: 20px;
-  padding: 0px;
+  margin-top: 10px;
 }
 
 .product-listing-sidebar {
